tests/snapshots/cli__reference_files@term__22.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/22.term
---
status: 0
stdout:
  - "144320256090.85095"
stderr: []
