tests/snapshots/cli__reference_files@term__23.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/23.term
---
status: 101
stdout: []
stderr:
  - "thread 'main' panicked at src/scanner.rs:114:59:"
  - "called `Result::unwrap()` on an `Err` value: ParseIntError { kind: PosOverflow }"
  - "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace"
