tests/snapshots/cli__reference_files@term__24.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/24.term
---
status: 0
stdout:
  - "885367903.5211854"
stderr: []
