tests/snapshots/cli__reference_files@term__25.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/25.term
---
status: 0
stdout:
  - "89535079418351.92"
stderr: []
