tests/snapshots/cli__reference_files@term__4.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/4.term
---
status: 0
stdout:
  - "-30794984788473.773"
stderr: []
