tests/snapshots/cli__reference_files@term__5.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/5.term
---
status: 0
stdout:
  - "-2946044.6082371445"
stderr: []
