tests/snapshots/cli__reference_files@term__6.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/6.term
---
status: 0
stdout:
  - "9165842356.68234"
stderr: []
