tests/snapshots/cli__reference_files@term__7.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/7.term
---
status: 0
stdout:
  - "0"
stderr: []
