tests/snapshots/cli__reference_files@term__8.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/8.term
---
status: 0
stdout:
  - "53185.32301573"
stderr: []
